--- a/index.html
+++ b/index.html
@@ -67,6 +67,22 @@
         
     </div>
     <!--BestEver-->
+    <!--Galary-->
+    <div class="galary">
+        <img class="projectbackground" src="img/projectbackground.png">
+        <div class="doska">
+            <p class="nameproject">Проекти</p>
+            <div class="project1">
+                <img class="imgproject1" src="img/project1.gif">
+                <div class="textproject1"><a href="project1.html">text</a></div>
+            </div>
+            <div class="project2">
+                <img class="imgproject2" src="img/project2.gif">
+                <div class="textproject2"><a href="project2.html">text</a></div>
+            </div>
+        </div>
+    </div>
+    <!--Galary-->
      <script src="JS/script.js"></script>
 </body>
 </html>
