--- a/index.html
+++ b/index.html
@@ -12,24 +12,40 @@
   <!--button-->
 <div class="bruh"><a href="#myTopnav"><img src="img/1main/arrow.png"></a></div>
 <!--button-->
-    <!--nav-->
-    <header>
-        <div class="logo">
-            <a href="index.html"><img  class="graphiclogo" src="img/1main/PRODes 1.png"> </a>
-        </div>
-        <nav>
-            <div class="topnav" id="myTopnav">
-                <a href="index.html" >HOME</a>
-                <a href="#group1!" >GROUP1</a>
-                <a href="#group2!" >GROUP2</a>
-                <a href="#concurs!" >CONCURS</a>
-                <a href="#galary!" >GALLERY</a>
-                <a id="menu" href="#" class="icon"><img class="triangle" src="img/1main/left.png">
-                </a>
-            </div>
-        </nav>
-    </header>
-    <!--nav-->
+<nav id="myTopnav" class="mobile">
+  <div class="logo">
+    <img src="img/1main/PRODes 1.png">
+    <div class="menuToggle"><img src="img/1main/left.png"></div>
+  </div>
+  <div class="wrapper">
+      
+      <ul class="menu">
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="#group1!">GROUP1</a></li>
+          <li><a href="#group2!">GROUP2</a></li>
+          <li><a href="#concurs!">CONCURS</a></li>
+          <li><a href="#galary!">GALLERY</a></li>
+      </ul>
+  </div>
+</nav>
+
+<!--nav-->
+<div class="nonmobile">
+<div class="logo2">
+  <a href="index.html"><img  class="graphiclogo" src="img/1main/PRODes 1.png"> </a>
+</div>
+<nav>
+  <div class="topnav" id="myTopnav">
+      <a href="index.html" >HOME</a>
+      <a href="#group1!" >GROUP1</a>
+      <a href="#group2!" >GROUP2</a>
+      <a href="#concurs!" >CONCURS</a>
+      <a href="#galary!" >GALLERY</a>
+      </a>
+  </div>
+</nav>
+</div>
+<!--nav-->
       <div class="w">
       <!--advertisment-->
       <div class="video">
