--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 <!--Галерея-->
 <!--Галерея-->
 <!--Галерея-->
-    <script src="JS/script.js"></script>
+    <script src="js/script.js"></script>
      <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
      
 </body>
