--- a/index.html
+++ b/index.html
@@ -405,6 +405,6 @@
 <!--Галерея-->
     
      <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-     <script src="JS/script.js"></script>
+     <script src="js/script.js"></script>
 </body>
 </html>
