--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
   <!--big-->
   <div class="fix">
 <div class="bigger">
-      <div class="bigname"><h1>НАЙРЕЛЕВАНТНІШИЙ КОНКУРС</h1></div>
+    <div class="bigname"><h1>CHALLENGE24</h1></div>
       <div class="big">
-        <div class="bigtext"><h1>CHALLENGE24</h1><p>Півфінал, який відбуватиметься онлайн, тобто кожен будинку в своєї країни.<br>
+        <div class="bigtext"><p>Півфінал, який відбуватиметься онлайн, тобто кожен будинку в своєї країни.<br>
           Необмежена кількість команд, 27 кращих потрапляють до фіналу, в якому будуть<br>
           також три найкращі команди минулого року (знявши в фіналі 1-3 місця)</p></div> <!--IMPOSTER!!!11!-->
         <a href="http://ch24.org/"><img class="bigimg" src="img/4concurs/big0ne.jpg"></a>
